# ing-bankstats

./: .gitignore  AGENTS.md  README.md  pyproject.toml  todo.md
.claude/: settings.json
config/: categories.yaml
data/: umsatzanzeige.template.csv
specs/: benchmarking-spec.md  initial-setup.md  mortgage-reclassification.md
src/ing_bankstats/: aggregator.py  categorizer.py  charts.py  cli.py  parser.py  report.py
src/ing_bankstats/assets/: categories.yaml  report.css  report.html.j2
tests/: conftest.py  test_aggregator.py  test_categorizer.py  test_multi_csv.py  test_parser.py  test_report.py
tests/fixtures/: sample.csv  savings.csv
